# src/routes/publicAPI/publicApiRoutes.js
@@ -2,13 +2,14 @@ const express = require('express');
 const router = express.Router();
 const { authCheckToken, authCheckTokenAdmin } = require('../../middleware/auth/authAdmin');
 const { getAllDataComplaints, insertDataComplaint, removeDataComplaint } = require('../../controllers/publicAPI/complaintController');
-const { fetchDataAllAttendanceRecord, checkIn, checkInVerifyOtp, checkOut } = require('../../controllers/publicAPI/attendanceRecordController');
+const { fetchDataAllAttendanceRecord, searchAttendanceRecords, checkIn, checkInVerifyOtp, checkOut } = require('../../controllers/publicAPI/attendanceRecordController');
 
 router.get('/getComplaints', getAllDataComplaints);
 router.post('/insertComplaint', insertDataComplaint);
 router.delete('/removeComplaint/:id', removeDataComplaint);
 
 router.get('/fetchDataAllAttendanceRecord', authCheckToken, fetchDataAllAttendanceRecord);
+router.get('/searchAttendanceRecords/:keyword', authCheckToken, searchAttendanceRecords);
 router.post('/checkIn', checkIn);
 router.post('/checkInVerifyOtp', checkInVerifyOtp);
 router.post('/checkOut', checkOut);
