# src/swagger.json
@@ -4184,6 +4184,22 @@
                                 "example": "ออกก่อนเวลา"
                               }
                             }
+                          },
+                          "created_at": {
+                            "type": "date",
+                            "example": "2025-03-19T05:34:20.000Z"
+                          },
+                          "created_by": {
+                            "type": "string",
+                            "example": "admin"
+                          },
+                          "updated_at": {
+                            "type": "date",
+                            "example": "2025-03-19T05:34:20.000Z"
+                          },
+                          "updated_by": {
+                            "type": "string",
+                            "example": "admin"
                           }
                         }
                       }
@@ -4229,7 +4245,7 @@
       }
     },
     "/akatApi/publicAPI/checkIn": {
-      "get": {
+      "post": {
         "tags": [
           "AttendanceRecord"
         ],
@@ -4469,7 +4485,7 @@
       }
     },
     "/akatApi/publicAPI/checkOut": {
-      "get": {
+      "post": {
         "tags": [
           "AttendanceRecord"
         ],
@@ -4538,6 +4554,164 @@
                     "message": {
                       "type": "string",
                       "example": "ไม่มี User นี้อยู่ในระบบ กรุณา Register ก่อนใช้งาน! || User นี้ไม่มีการ CheckIn เข้าทำงาน! || ไม่มีข้อมูล (สถานะการออกงาน) กรุณาเพิ่มข้อมูลก่อน!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "internal server errors"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/akatApi/publicAPI/searchAttendanceRecords/{keyword}": {
+      "get": {
+        "tags": [
+          "AttendanceRecord"
+        ],
+        "summary": "สำหรับดึงข้อมูล AttendanceRecord",
+        "description": "สำหรับดึงข้อมูลทั้งหมดของ AttendanceRecord",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+            },
+            "description": "Token จากการล็อกอิน ส่งในรูปแบบ Bearer Token"
+          },
+          {
+            "name": "keyword",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 1
+            },
+            "description": "Keyword ของ Complaint ที่ต้องการลบ"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ความสำเร็จทั่วไป",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "attendance_record_id": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "users": {
+                            "type": "object",
+                            "items": {
+                              "fullname_thai": {
+                                "type": "string",
+                                "example": "นายดำ ขำแห้ง"
+                              }
+                            }
+                          },
+                          "shift_types": {
+                            "type": "object",
+                            "items": {
+                              "shift_type_name": {
+                                "type": "string",
+                                "example": "OnCall"
+                              }
+                            }
+                          },
+                          "shifts": {
+                            "type": "object",
+                            "items": {
+                              "shift_name": {
+                                "type": "string",
+                                "example": "เช้า"
+                              }
+                            }
+                          },
+                          "starting": {
+                            "type": "string",
+                            "example": "10:33:35"
+                          },
+                          "check_in_status": {
+                            "type": "object",
+                            "items": {
+                              "check_in_status_name": {
+                                "type": "string",
+                                "example": "เข้างาน"
+                              }
+                            }
+                          },
+                          "ending": {
+                            "type": "string",
+                            "example": "10:34:00"
+                          },
+                          "check_out_status": {
+                            "type": "object",
+                            "items": {
+                              "check_out_status_name": {
+                                "type": "string",
+                                "example": "ออกก่อนเวลา"
+                              }
+                            }
+                          },
+                          "created_at": {
+                            "type": "date",
+                            "example": "2025-03-19T05:34:20.000Z"
+                          },
+                          "created_by": {
+                            "type": "string",
+                            "example": "admin"
+                          },
+                          "updated_at": {
+                            "type": "date",
+                            "example": "2025-03-19T05:34:20.000Z"
+                          },
+                          "updated_by": {
+                            "type": "string",
+                            "example": "admin"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Resource ไม่พบ",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "ไม่มีข้อมูลบน Database!"
                     }
                   }
                 }
